chore(calendar): limpieza SonarQube (0 bugs/vulns/smells)
Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>